--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+
+.navbar{
+	background-color: transparent;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar.colorChange{
+	background-color: rgb(74, 179, 248);
+  /* background-color: rgb(166, 216, 250); */
+}
+.banner{
+  position: absolute;
+  top:0;
+border-bottom: none;
+background-position: center;
+background-size: cover;
+height: 80%;
+width: 100%;
+background-repeat: no-repeat;
+z-index: 0;
+background-color: #000;
+opacity:0.8 ;
+/* background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url('./components/bg-gift.jpg'); */
+
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
+  
+ 
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
