--- a/src/components/geolocation.css
+++ b/src/components/geolocation.css
@@ -1,14 +1,56 @@
-.GEO_img{
- position: absolute;
+.tripdiv{
+    position: absolute;
+    background-image: url('/src/components/image/blue.jpg');
+    background-repeat: no-repeat;
+    border-bottom: none;
+    background-position: center;
+    background-size: cover;
+    height: 80%;
+    width: 100%;
+    z-index: 0;
+}
 
-border-bottom: none;
-background-position: center;
-background-size: cover;
-height: 80%;
-width: 100%;
-background-repeat: no-repeat;
-z-index: 0;
-
-
+/* .formtable{
+    border:2px solid black;
+} */
+.btn_requset{
+        background: #3498db;
+        background-image: -webkit-linear-gradient(top, #3498db, #13449F);
+        background-image: -moz-linear-gradient(top, #3498db, #13449F);
+        background-image: -ms-linear-gradient(top, #3498db, #13449F);
+        background-image: -o-linear-gradient(top, #3498db, #13449F);
+        background-image: linear-gradient(to bottom, #3498db, #13449F);
+        -webkit-border-radius: 7;
+        -moz-border-radius: 7;
+        border-radius: 7px;
+        font-family: Georgia;
+        color: #ffffff;
+        font-size: 30px;
+        padding: 13px 20px 10px 20px;
+        margin-top: 3%;
+        border: solid #13449F 2px;
+        text-decoration: none;
+      }
+      
+      .btn_requset:hover {
+        background: #3cb0fd;
+        background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+        text-decoration: none;
+      }
+.request_position{
+    text-align: center;
+    padding-top: 6rem;
+}
+.Icon_clock{
+        height: 2.5rem;
+        width:2.5rem;
+        padding-top: 2rem;
     
+}
+.p_Icon{
+  flex-direction: row;
 }
