--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,12 @@
 }
 
 .navbar.colorChange{
-	background-color: rgb(74, 179, 248);
-  /* background-color: rgb(166, 216, 250); */
-}
+	/* background-color: rgb(17, 143, 228); */
+  /* background-color: #2A7C9A; */
+  background-color: #F6F6F6;
+ 
+
+} 
 .banner{
   position: absolute;
   top:0;
@@ -26,6 +29,79 @@ opacity:0.8 ;
 
 
 
-  
+
+
+
+
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+/* .Da_nav-link {
+  padding: 7px 35px;
+  -webkit-border-radius: 7;
+  -moz-border-radius: 7;
+  border-radius: 7px;
+  font-family: Georgia;
+  display: inline-block;
+  background-color:  white;
+  ;
+  color: white;
+  font-size: 30px;
+  padding: 10px 20px 10px 20px;
+  border: solid #13449F 2px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.06),
+            0 2px 10px 0 rgba(0,0,0,0.07);
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+}
+.Da_nav-link:hover {
+  background: #3cb0fd;
+      background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+      background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+      background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+      background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+      background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+      text-decoration: none;
+  transform: translateY(1px);
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.10),
+            0 1px 1px 0 rgba(0,0,0,0.09);
+}
+
+   */
  
 
