--- a/src/components/our_service.css
+++ b/src/components/our_service.css
@@ -68,12 +68,13 @@
     }
 
     .sa_ourstory{
-       
+        font-family: 'Poppins', sans-serif, 'arial';
         color: #1f2732;
        height: 1px;
        position:relative;
        animation: sa_hh 2s 1;
        padding: 0.5em;
+       text-align: center;
     }
 
     @keyframes sa_hh {
@@ -103,7 +104,7 @@
             width:50%;
         }
         .imageContainer #img_about {
-            width: 260%;}
+            width: 218%;}
 .sa_ourstory{
     font-size: large;
     padding-left: 100px;
@@ -127,7 +128,7 @@ padding-top: -12rem;
     }
 
     .DA_anim1_se{
-         /* text-align: center; */
+         text-align: center;
     animation: Ser3 1s 1;
     position: relative;
     /* padding: 2rem; */
