--- a/src/components/Maps/Maps.css
+++ b/src/components/Maps/Maps.css
@@ -1,14 +1,14 @@
-/* .Maps{
-    margin-top: 40rem;
-} */
-.maps{
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-attachment:fixed;  
-    margin-top: 35rem;
-/* background-size:70%; */
-  background-position: center;
-  position: 'relative';
-  /* width: 100%;
-  height: 35rem; */
+
+.mapouter{
+  position:relative;
+  text-align:right;
+  height:500px;
+  width:600px;
+}
+
+.gmap_canvas{
+  margin-top: 5rem;
+  margin-left: 3rem;
+  margin-bottom: 0rem;
+
 }
