--- a/src/pages/Home_page/Home_page.css
+++ b/src/pages/Home_page/Home_page.css
@@ -2,3 +2,88 @@
     margin-top: 50%;
 }
 
+.M_G{
+  background-color: #F6F6F6;
+
+}
+
+
+#A {
+  /* background: #0F4C75; */
+  background: #027b9a;
+  margin-top: 0;
+  margin-bottom: 2rem;
+  /* margin: 0; */
+}
+
+#A::after {
+  content: "";
+  position: relative;
+  left: -3rem;
+  /* padding * -1 */
+  top: calc( 3rem - 4rem / 2);
+  /* padding - height/2 */
+  float: left;
+  display: block;
+  height: 4rem;
+  width: 106.8%;
+  background: hsla(0, 0%, 100%, 0.5);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 70 500 60' preserveAspectRatio='none'%3E%3Crect x='0' y='0' width='500' height='500' style='stroke: none; fill: %23F6F6F6;' /%3E%3Cpath d='M0,100 C150,200 350,0 500,100 L500,00 L0,0 Z' style='stroke: none; fill: %23027b9a;'%3E%3C/path%3E%3C/svg%3E");
+  background-size: 100% 100%;
+}
+#A {
+  padding: 3rem;
+}
+#A {
+  color: white;
+}
+
+.Home_geo{
+  margin-top: 6rem;
+}
+.div_home_style{
+  padding-top: 2rem;
+}
+
+.H1_A_H{
+  color: #FFF;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: bold;
+  letter-spacing: 5px;
+  /* background-color: transparent;
+  width: min-content; */
+
+  /* padding: 1rem; */
+  /* border: 2px solid #fff; */
+  /* border: 1px solid rgb(154, 218, 243) ;
+  box-shadow: 0 10px 14px 0 rgba(241, 236, 236, 0.45),0 17px 50px 0 rgba(250, 250, 250, 0.527); */
+
+}
+.H2_A_H{
+  color: #FFF;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+ font-style: italic;
+word-spacing: 10px;
+
+}
+.Home_h1{
+  color: white;
+  font-family: Arial;
+  text-align: center;
+  font-size: 30px;
+}
+
+a#download {
+  display: block;
+  text-align: center;
+  width: 170px;
+  /* margin: 10px auto;
+  margin-bottom: 2rem; */
+  /* padding: 20px; */
+  color: white;
+  text-transform: uppercase;
+  font-family: Arial;
+  border: 1px solid #fff;
+  text-decoration: none;
+  border-radius: 10px;
+}
