--- a/src/components/Getin_touch/About1/about1.css
+++ b/src/components/Getin_touch/About1/about1.css
@@ -34,16 +34,12 @@
 
 
 .cc{
-color: black;
+color: white;
     font-weight:bold;
     font-size: 25px;
 }
-/* .kkk{
-  
-   
-    display: flex;
- 
-    
+.pp{
+    color: white;
 }
 .first{
    padding-right: 10em;
